# Rust

./: .gitignore  cargo_env.sh
ft_cat/: Cargo.toml
ft_cat/src/: main.rs
ft_guessing_game/: Cargo.toml
ft_hello_world/: Cargo.toml
ft_server_http/: Cargo.toml
ft_server_http/http/: helloworld.html
ft_server_http/src/: main.rs
ft_server_http_get/: Cargo.toml
ft_server_http_get/http/: 404.html
ft_server_http_get/src/: main.rs
ft_server_tcp/: Cargo.toml
ft_server_tcp/src/: main.rs
ft_time_server/: Cargo.toml
ft_time_server/src/: main.rs
ft_word_count/: Cargo.toml  testFile
ft_word_count/src/: main.rs
scrapper/: Cargo.toml
scrapper/src/: lib.rs  main.rs
scrapper/src/parse_input_request/: mod.rs  parse_request.rs  parse_search.rs
scrapper/src/scrap_source/: mod.rs  scrap.rs
scrapper/src/send_response/: mod.rs  send_request_response.rs
scrapper/src/server/: connection_handler.rs  mod.rs  tcp.rs
scrapper/src/source/: google_search.rs  mod.rs
scrapper/src/view/: body.rs  css.rs  head.rs  html.rs  meta.rs  mod.rs  script.rs
