[package]
name = "testRR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.31"
bytes = "1.5.0"
openssl-sys = "0.9.99"
futures = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.18.1"
